修正語系為utf8

--- a/project/index.html
+++ b/project/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <link href="./assets/bootstrap/css/bootstrap.css" rel=stylesheet>
   <script src="./assets/bootstrap/js/jquery.min.js"></script>
   <script src="./assets/waypoint/jquery.waypoints.min.js"></script>
@@ -20,6 +21,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Intro.</title>
 </head>
+
 <body class="um-theme-dark">
   <!--nav-->
   <nav class="topindex navbar navbar-default">
@@ -79,15 +81,15 @@
           </div>
         </div>
       </div>
-      <div class="topindex col-md-6">
-        <div data-wow-duration="4.5s" data-wow-delay="0.65s" class="description wow animated fadeIn">
+      <div class="col-md-6">
+        <div data-wow-duration="4.5s" data-wow-delay="0.65s" class="topindex description wow animated fadeIn">
           訪客您好！這裡記載著Yu Hsiang的一些經歷！
           <br/> 我是Yu Hsiang，目前專攻前端 ( Frontend )
           <br/> 曾在3drens物聯網、資策會教研所實習
           <br/> 負責開發、維護，並且學習到相關專業技能！
           <br/> 並自行開發兩套WordPress版型《Stable》、《Never Nop》
         </div>
-        <div data-wow-duration="1.3s" data-wow-delay="1.3s" class="action wow animated bounceInRight">
+        <div data-wow-duration="1.3s" data-wow-delay="1.3s" class="topindex action wow animated bounceInRight">
           <h2>您可以嘗試看看...</h2>
           <button style="margin:5px;border-color:black; border-radius: 20px;padding:5px;width:120px;background:white;color:black;"
             onclick="changeTheme('um-theme-light')">點燈</button>
