--- a/project/index.html
+++ b/project/index.html
@@ -357,21 +357,22 @@
     });
     bar.animate(rate);  // Number from 0.0 to 1.0
   }
-
+  drawProgressbar(progressbar1, 0.95);
+  drawProgressbar(progressbar2, 0.85);
+  drawProgressbar(progressbar3, 0.8);
+  drawProgressbarLine(progressbarline1, 0.95, '    HTML5', '#ff9304');
+  drawProgressbarLine(progressbarline2, 0.8, '    Photoshop', '#ff9304');
+  drawProgressbarLine(progressbarline3, 0.9, '    SCSS/CSS/Bootstrap', '#ff9304');
+  drawProgressbarLine(progressbarline4, 0.9, '   JQuery', '#ff9304');
+  drawProgressbarLine(progressbarline5, 0.75, '    ReactJS', '#ff9304');
+  drawProgressbarLine(progressbarline6, 0.75, '    Vue.js', '#ff9304');
   $(document).ready(function () {
     $('#skill').waypoint(function (event, direction) {
-      drawProgressbar(progressbar1, 0.95);
-      drawProgressbar(progressbar2, 0.85);
-      drawProgressbar(progressbar3, 0.8);
+      alert('goin');
       this.destroy();
     }, { offset: '50%' });
     $('#master').waypoint(function (event, direction) {
-      drawProgressbarLine(progressbarline1, 0.95, '    HTML5', '#ff9304');
-      drawProgressbarLine(progressbarline2, 0.8, '    Photoshop', '#ff9304');
-      drawProgressbarLine(progressbarline3, 0.9, '    SCSS/CSS/Bootstrap', '#ff9304');
-      drawProgressbarLine(progressbarline4, 0.9, '   JQuery', '#ff9304');
-      drawProgressbarLine(progressbarline5, 0.75, '    ReactJS', '#ff9304');
-      drawProgressbarLine(progressbarline6, 0.75, '    Vue.js', '#ff9304');
+
       this.destroy();
     }, { offset: '50%' });
   });
