更新自動往上樣式與底層橫幅

--- a/project/index.html
+++ b/project/index.html
@@ -12,9 +12,9 @@
   <link href="./assets/devicemockup/device-mockups.css" rel=stylesheet>
   <link href="./assets/devicemockup/device-mockups.min.css" rel="stylesheet" type="text/css">
   <script src="assets/progressbar/progressbar.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <script src="assets/wow/wow.min.js"></script>
   <script>new WOW().init();</script>
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link href="./assets/core/style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ"
     crossorigin="anonymous">
@@ -245,8 +245,7 @@
     <div class="row">
       <hr/>
     </div>
-    <div class="row" style="text-align: center;">
-
+    <div class="row" style="text-align: center;padding-bottom: 50px;">
       <div class="col-md-6" style="text-align: right;">
         <div data-wow-duration="1.3s" class="device-description animate fadeInLeft wow">
           <h2>#2《Never Nop》WordPress主題設計</h2>
@@ -264,16 +263,16 @@
   </div>
   <!--./container-->
   <div id="gotop">
-    <i class="fas fa-angle-up"></i>
-  </div>
+    <span class="topcircle">
+      <i class="fa fa-arrow-up"></i>
+    </span>
+  </div
   <footer>
-    <br/>
-    <br/>
-    <div style="text-align: center;color:white;margin-bottom: 0px;">
+    <div class="other">
+    </div>
+    <div  class="copyright">
       Copyright © 2018 designed by @Yu-Hsiang
     </div>
-    <br/>
-    <br/>
   </footer>
 </body>
 <script>
@@ -335,7 +334,7 @@
         percentage: 95,
         radius: '0px',
         height: '12px',
-        text:'HTML5',
+        text: 'HTML5',
         fillBackgroundColor: '#ea8706'
       });
       $('#progressbarline2').LineProgressbar({
@@ -393,7 +392,7 @@
 <canvas style="display: none;">
 
   <script>
-    var bgcolor = 0x282729, particleColor = 0xffffff;
+    bgcolor = 0x282729, particleColor = 0xffffff;
   </script>
   <script src="./assets/three/three.js"></script> +
   <script src="./assets/three/stats.min.js"></script> +
